# xbow4x

./: .xdp_CMakeLists.txt.MT07U1  CMakeLists.txt  README.md  package.xml
include/xbow400/: xbow4x.hpp
include/xbow4x/: xbow4x.h
include/xbow6x/: xbow6x.h
launch/: launch.xml  xbow4x.launch  xbow6x.launch
params/: imu_covariance.yaml  imu_params.yaml
src/: xbow4x.cpp  xbow4x_node.cpp  xbow6x.cpp  xbow6x_node.cpp
srv/: set_baudrate.srv
xbow400/: CMakeLists.txt  package.xml
xbow400/include/xbow400/: xbow4x.hpp
xbow400/launch/: launch.xml  xbow400.launch
xbow400/params/: imu_params.yaml
xbow400/src/: xbow4x.cpp  xbow4x_node.cpp
xbow400_interfaces/: CMakeLists.txt  package.xml
xbow400_interfaces/srv/: BroadcastTf.srv  Status.srv
