<?xml version="1.0"?>
<package>
  <name>xbow6x</name>
  <version>0.0.0</version>
  <description>The xbow6x package</description>

  <author email="david.hodo@gmail.com">David Hodo</author>
  <maintainer email="david.miguel.dias@tecnico.ulisboa.pt">David Dias</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
