<?xml version="1.0"?>
<package>
  <name>xbow4x</name>
  <version>0.0.2</version>
  <description>The xbow4x package</description>

  <author email="jage@uma.es">Juan Alberto García Esteban</author>
  <maintainer email="jage@uma.es">Juan Alberto García Esteban</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
