<?xml version="1.0"?>
<package>
  <name>xbow4x</name>
  <version>1.0.0</version>
  <description>
    The xbow4x package

    Different node services in order to be able to use all IMU functionalities

    - send_command: allows to send commands to the IMU with which to activate the
     different operating modes, obtain data and sensor information.
        Usage: send_Command [command]. Commands:
            - R: Reset. Stops all calculations and communications, reset the IMU keeps the measurement mode and leaves the IMU in polled mode.
            - S: Returns the IMU serial number.
            - v: Returns the version of the IMU in use.
            - G: Returns a data packet in polling mode. For continuous mode, switching to polling mode.
            - P: Polling mode. If continuous mode is active, stops it and activates polling mode. The G command is used to poll packets.
            - C: Continuous mode. Returns data packets at a frequency of 60 Hz.
    -a: Angle mode. Returns angular velocity, linear acceleration, magnetic field and the angles (roll, pitch and yaw). In this mode a Kalman Filter is used to filter the signal.
            - c: Scaled Mode. Returns angular velocity, linear acceleration and magnetic field. This mode corrects the measurements.
            - r: Voltage mode. Returns angular velocity, linear acceleration and magnetic field. The data are raw, uncorrected and uncalibrated.
    - calibrate: allows to send calibration commands.
        Usage: calibrate [command]. Commands:
            - s: starts calibration mode. Stops the other modes (continuous or polling). While the calibration is active the other modes do not work, it is necessary to stop the calibration.
            - u: stops calibration mode. The message mode active after it is polling mode.
            - h: clear hard iron calibration data
            - t: clear soft iron calibration data
    - set_baudrate: allows to use the automatic IMU baud rate setting functionality.
        Usage: set_baudrate [baudrate]
    Note: does not work as well as it should because the IMU make a response but the baudrate not change.
    - status: returns IMU status, measurement and communication modes enabled.
        Usage: status
    - broadcast_ft: allows to enable and disable the broadcasting of the IMU reference
     system with respect to the WORD reference system.
        Usage: broadcast_ft [true/false]

    More details in the AHRS400CC-100 documentation.

  </description>

  <author email="jage@uma.es">Juan Alberto García Esteban</author>
  <maintainer email="jage@uma.es">Juan Alberto García Esteban</maintainer>

  <url type="website">https://github.com/jage92/xbow4x</url>
  <url type="bugtracker">https://github.com/jage92/xbow4x/issues</url>
  <url type="repository">https://github.com/jage92/xbow4x</url>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
