<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbow400_interfaces</name>
  <version>1.1.0</version>
  <description>The xbow4x package interfaces</description>
      <author email="jage@uma.es">Juan Alberto García Esteban</author>
      <maintainer email="jage@uma.es">Juan Alberto García Esteban</maintainer>
      <license>MIT License</license>

<buildtool_depend>rosidl_default_generators</buildtool_depend>
<member_of_group>rosidl_interface_packages</member_of_group>

<export>
  <build_type>ament_cmake</build_type>
</export>
</package>
